# TimeTunnelTV

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  install.sh  pyproject.toml
curator/: __init__.py  cli.py  config.py  db.py  fetch.py  recommend.py  web.py
curator/static/: style.css
curator/templates/: index.html  rated_fragment.html
tests/: __init__.py  test_cli.py  test_cli_fetch.py  test_cli_recommend.py  test_config.py  test_db.py  test_fetch.py  test_recommend.py  test_web.py
