[tool.poetry]
name = "archive-curator"
version = "0.1.0"
description = "LAN video curator backed by the Internet Archive"
authors = ["Speakes <cspeakes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
sentence-transformers = "^2.7.0"
flask = "^3.0.2"
rich = "^13.7.0"
tqdm = "^4.66.4"
click = "^8.1.7"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
mypy  = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
curator = 'curator.cli:cli'
